tests/ui/infer/instantiate.stderr
error: mismatch types
    ╭─[tests/ui/infer/instantiate.ina:13:23]
    │
 13 │     app![i32, i64](3, id);
    │                       ╶╮
    │                        ╰── expected `i64`, found `i32`
    ∙
────╯
